--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <link rel="stylesheet" href="../css/company_event.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/profielLogIn.css">
+    <link rel="stylesheet" href="css/company_event.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/profielLogIn.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <!--  dit is het icon font via google: ------>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title> Event Name Here | App Name Here</title>
-    <script src="../js/jquery-3.2.1.js"></script>
-    <script src="../js/buttons_subscribe.js"></script>
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/buttons_subscribe.js"></script>
 
-    <script src="../js/event_detailpage.js"></script>
+    <script src="js/event_detailpage.js"></script>
 
 </head>
 
@@ -26,9 +26,9 @@
     <main>
         <div id="naamEvent" class="profielFoto">
         </div>
-        <div class="row clearfix"> <a class="icon_link" href="../calendar.html"><i class="material-icons">event</i></a>
+        <div class="row clearfix"> <a class="icon_link" href="calendar.html"><i class="material-icons">event</i></a>
             <div id="data" class="info_company"></div> <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
-        <div class="row clearfix"> <a class="icon_link" href="../html/Company_Profile.html"><i class="material-icons">location_on</i></a>
+        <div class="row clearfix"> <a class="icon_link" href="Company_Profile.html"><i class="material-icons">location_on</i></a>
             <div id="plaats" class="info_company"></div>
 
             <div class="connect_users">
@@ -123,16 +123,16 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="../html/index.html"> <img src="/img/icon/home.svg" /></a>
+                <a href="index.html"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="../calendar.html"><img src="/img/icon/calendar.svg" /></a>
+                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
