--- a/Profiel.html
+++ b/Profiel.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Jan Smit | Profiel</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/profiel.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/profiel.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+
 </head>
 
 <body>
-   
+
     <header class="hoofddingProfiel">
         <h2>Profile</h2>
     </header>
 
     <div class="profielFoto">
-        <img id="foto" src="/img/Placeholder.jpg" />
+        <img id="foto" src="img/Placeholder.jpg" />
         <h1 id="naam">Hier komt een naam</h1>
     </div>
 
@@ -36,24 +36,32 @@
             <hr>
             <li><a href="#">Settings</a></li>
             <hr>
-            <li><a href="/html/profielLogIn.html">Afmelden</a></li>
+            <li><a href="profielLogIn.html">Afmelden</a></li>
             <br>
         </ul>
     </div>
 
 
 
-     <footer class="nav">
+    <footer class="nav">
         <ul>
-            <li><a href="../html/index.html"> <img src="/img/icon/home.svg" /></a></li>
-            <li><a href="../html/calendar.html"><img src="/img/icon/calendar.svg" /></a></li>
-            <li><a href="../html/SearchPage.html"><img src="/img/icon/search.svg" /></a></li>
-            <li><a href="../html/profielLogIn.html"><img src="/img/icon/user.svg" /></a></li>
+            <li>
+                <a href="index.html"> <img src="img/icon/home.svg" /></a>
+            </li>
+            <li>
+                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
+            </li>
+            <li>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
+            </li>
+            <li>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
+            </li>
         </ul>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/js/profiel.js"></script>
+    <script src="js/profiel.js"></script>
 </body>
 
 </html>
