--- a/Company_Profile.html
+++ b/Company_Profile.html
@@ -109,16 +109,16 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="html/index.html"> <img src="img/icon/home.svg" /></a>
+                <a href="index.html"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="html/calendar.html"><img src="img/icon/calendar.svg" /></a>
+                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="html/SearchPage.html"><img src="img/icon/search.svg" /></a>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="html/profielLogIn.html"><img src="img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
