--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/home.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    <script src="/js/getDataForMap.js">
+    <script src="js/getDataForMap.js">
     </script>
 </head>
 
@@ -30,16 +30,16 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="#"> <img src="/img/icon/home.svg" /></a>
+                <a href="#"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="/img/icon/calendar.svg" /></a>
+                <a href="#"><img src="img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="/img/icon/search.svg" /></a>
+                <a href="#"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="/img/icon/user.svg" /></a>
+                <a href="#"><img src="img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
