--- a/calendar.html
+++ b/calendar.html
@@ -44,16 +44,16 @@
   <footer class="nav">
     <ul>
       <li>
-        <a href="html/home.html"> <img src="/img/icon/home.svg" /></a>
+        <a href="home.html"> <img src="img/icon/home.svg" /></a>
       </li>
       <li>
-        <a href="calendar.html"><img src="/img/icon/calendar.svg" /></a>
+        <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
       </li>
       <li>
-        <a href="html/SearchPage.html"><img src="/img/icon/search.svg" /></a>
+        <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
       </li>
       <li>
-        <a href="html/profielLogIn.html"><img src="/img/icon/user.svg" /></a>
+        <a href="sprofielLogIn.html"><img src="img/icon/user.svg" /></a>
       </li>
     </ul>
   </footer>
