--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -138,7 +138,7 @@
     </footer>
 
 
-    <script src="../js/accordion_menu_company.js"></script>
+    <script src="js/accordion_menu_company.js"></script>
 </body>
 
 </html>
