--- a/registerHere.html
+++ b/registerHere.html
@@ -15,6 +15,7 @@
 
 <body>
     <header class="hoofddingLogin">
+        <input id="terugKnop" type="button" value="&nbsp; &lang;" onclick="goBack()">
         <h2>Log in</h2>
     </header>
 
