--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="#"> <img src="img/icon/home.svg" /></a>
+                <a href="index.html"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="img/icon/calendar.svg" /></a>
+                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="img/icon/search.svg" /></a>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="#"><img src="img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
