--- a/SearchPage.html
+++ b/SearchPage.html
@@ -20,12 +20,12 @@
   <side class="ingeklapt" id="filterMenu">
     <div class="bgColor">
       <ul>
-        <li class="notToggled" id="FoodAndDrinks" onclick="ToggleFilters(event) "> <span class="before"></span>Food &amp; Drinks</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
-        <li class="notToggled" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
+        <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event) "> <span class="before"></span>Food &amp; Drinks</li>
+        <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
+        <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
+        <li class="notToggled" id="clothing&Accessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
+        <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+        <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
         <li>
           <button onclick="genereerLijstMetBedrijven()">Zoek</button>
         </li>
@@ -39,12 +39,12 @@
     <section class="normalFilters">
       <h1>Filters</h1>
       <ul>
-        <li class="notToggled" id="FoodAndDrinks" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
-        <li class="notToggled" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li class="notToggled" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
+        <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
+        <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
+        <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
+        <li class="notToggled" id="clothingAccessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
+        <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+        <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
       </ul>
       <button onclick="genereerLijstMetBedrijven()">Zoek</button>
     </section>
@@ -52,7 +52,7 @@
   <footer class="nav">
     <ul>
       <li>
-        <a href="home.html"> <img src="img/icon/home.svg" /></a>
+        <a href="index.html"> <img src="img/icon/home.svg" /></a>
       </li>
       <li>
         <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
