--- a/SearchPage.html
+++ b/SearchPage.html
@@ -2,69 +2,69 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/SearchPage.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/SearchPage.js"></script>
-  <title> Search </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/SearchPage.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/SearchPage.js"></script>
+    <title> Search </title>
 </head>
 
 <body>
-  <header>
-    <input type="text" onkeyup="zoekWaardeVeranderen()" onkeydown="FilterFunctie()" placeholder="Search" id="search"> <img src="img/icon/equalizer2.svg" onclick="ToonFilterMenu()"> </header>
-  <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
-  <side class="ingeklapt" id="filterMenu">
-    <div class="bgColor">
-      <ul>
-        <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event) "> <span class="before"></span>Food &amp; Drinks</li>
-        <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
-        <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
-        <li class="notToggled" id="clothing&Accessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
-        <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
-        <li>
-          <button onclick="genereerLijstMetBedrijven()">Zoek</button>
-        </li>
-      </ul>
-    </div>
-  </side>
-  <main id="content">
-    <h1>Interesting venues</h1>
-    <section class="Slider"> </section>
+    <header>
+        <input type="text" onkeyup="zoekWaardeVeranderen()" onkeydown="FilterFunctie()" placeholder="Search" id="search"> <img src="img/icon/equalizer2.svg" onclick="ToonFilterMenu()"> </header>
     <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
-    <section class="normalFilters">
-      <h1>Filters</h1>
-      <ul>
-        <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
-        <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
-        <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
-        <li class="notToggled" id="clothingAccessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
-        <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
-        <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
-      </ul>
-      <button onclick="genereerLijstMetBedrijven()">Zoek</button>
-    </section>
-  </main>
-  <footer class="nav">
-    <ul>
-      <li>
-        <a href="index.html"> <img src="img/icon/home.svg" /></a>
-      </li>
-      <li>
-        <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
-      </li>
-      <li>
-        <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
-      </li>
-      <li>
-        <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
-      </li>
-    </ul>
-  </footer>
+    <side class="ingeklapt" id="filterMenu">
+        <div class="bgColor">
+            <ul>
+                <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event) "> <span class="before"></span>Food &amp; Drinks</li>
+                <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
+                <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
+                <li class="notToggled" id="clothing&Accessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
+                <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+                <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
+                <li>
+                    <button onclick="genereerLijstMetBedrijven()">Zoek</button>
+                </li>
+            </ul>
+        </div>
+    </side>
+    <main id="content">
+        <h1>Interesting venues</h1>
+        <section class="Slider"> </section>
+        <!--_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-->
+        <section class="normalFilters">
+            <h1>Filters</h1>
+            <ul>
+                <li class="notToggled" id="foodDrinks" onclick="ToggleFilters(event)"> <span class="before"></span>Food &amp; Drinks</li>
+                <li class="notToggled" id="Beauty" onclick="ToggleFilters(event)"><span class="before"></span>Beauty</li>
+                <li class="notToggled" id="socialInitiatives" onclick="ToggleFilters(event)"><span class="before"></span>Social initiatives</li>
+                <li class="notToggled" id="clothingAccessories" onclick="ToggleFilters(event)"><span class="before"></span> Clothing &amp; accessories</li>
+                <li class="notToggled" id="DIY" onclick="ToggleFilters(event)" id="notToggled"><span class="before"></span>DIY</li>
+                <li class="notToggled" id="Hobbies" onclick="ToggleFilters(event)"><span class="before"></span>Hobbies</li>
+            </ul>
+            <button onclick="genereerLijstMetBedrijven()">Zoek</button>
+        </section>
+    </main>
+    <footer class="nav">
+        <ul>
+            <li>
+                <a href="index.html"> <img src="img/icon/home.svg" /></a>
+            </li>
+            <li>
+                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
+            </li>
+            <li>
+                <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
+            </li>
+            <li>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
