--- a/registerHere.html
+++ b/registerHere.html
@@ -57,7 +57,7 @@
         </ul>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery-3.2.1.js"></script>
 </body>
 
 </html>
