--- a/Profiel.html
+++ b/Profiel.html
@@ -26,17 +26,41 @@
 
     <div class="linksProfiel">
         <ul>
-            <li><a href="#">My profile</a></li>
+            <li>
+                <a href="#">
+                    <h3>My profile</h3>
+                </a>
+            </li>
             <hr>
-            <li><a href="#">My invitations</a></li>
+            <li>
+                <a href="#">
+                    <h3>My invitations</h3>
+                </a>
+            </li>
             <hr>
-            <li><a href="#">Start new initiative</a></li>
+            <li>
+                <a href="#">
+                    <h3>Start new initiative</h3>
+                </a>
+            </li>
             <hr>
-            <li><a href="#">Favourites</a></li>
+            <li>
+                <a href="#">
+                    <h3>Favourites</h3>
+                </a>
+            </li>
             <hr>
-            <li><a href="#">Settings</a></li>
+            <li>
+                <a href="#">
+                    <h3>Settings</h3>
+                </a>
+            </li>
             <hr>
-            <li><a href="profielLogIn.html">Afmelden</a></li>
+            <li>
+                <a href="profielLogIn.html">
+                    <h3>Afmelden</h3>
+                </a>
+            </li>
             <br>
         </ul>
     </div>
