--- a/calendar.html
+++ b/calendar.html
@@ -53,7 +53,7 @@
                 <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="sprofielLogIn.html"><img src="img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
             </li>
         </ul>
     </footer>
