--- a/profielLogIn.html
+++ b/profielLogIn.html
@@ -22,10 +22,10 @@
 
     <div class="loginGegevens">
 
-        <p>Username</p>
+        <h3>Username</h3>
         <input type="text" id="username" onclick="dropdownUsername()" onblur="clickOutUsername() " />
 
-        <p>Password</p>
+        <h3>Password</h3>
         <input type="password" id="password" onclick="dropdownPassword()" onblur="clickOutPassword() " />
 
     </div>
@@ -40,7 +40,7 @@
 
     <br>
 
-    <p id="registerHere">Want to join? <a id="linkRegisterHere" href="registerHere.html">Register here.</a> It's free!</p>
+    <h3 id="registerHere">Want to join? <a id="linkRegisterHere" href="registerHere.html">Register here.</a> It's free!</h3>
 
     <div class="socialMediaIcons">
         <ul>
