--- a/registerHere.html
+++ b/registerHere.html
@@ -23,13 +23,13 @@
 
     <div class="loginGegevens">
 
-        <p>Username</p>
+        <h3>Username</h3>
         <input type="text" id="username" onclick="dropdownUsername()" onblur="clickOutUsername() " />
 
-        <p>Password</p>
+        <h3>Password</h3>
         <input type="password" id="password" onclick="dropdownPassword()" onblur="clickOutPassword() " />
 
-        <p>Repeat Password</p>
+        <h3>Repeat Password</h3>
         <input type="password" id="repeatPassword" onclick="dropdownRepeatPassword()" onblur="clickOutresetPassword() " />
 
     </div>
