--- a/Company_Profile.html
+++ b/Company_Profile.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/company_event.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial- scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title> Company Name Here | App Name Here</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <!--  dit is het icon font via google: ------>
@@ -18,6 +18,7 @@
 
     </script>
     <script src="js/jquery-3.2.1.js"></script>
+
     <script src="js/buttons_subscribe.js"></script>
 </head>
 
@@ -37,8 +38,9 @@
                 <p>3000 Brussel</p>
                 <p><a href="mailto:info@kittybons.com">contact</a></p>
             </div>
-            <div class="connect_users"> <a class="subscribe_button icon_link" href=""><i class="material-icons" id="hartje">favorite_border</i></a>
-                <p id="number_subs">1</p>
+            <div class="connect_users">
+                <span class="subscribe_button icon_link" href="#"><i class="material-icons hartje" >favorite_border</i></span>
+                <p class="number_subs">1</p>
             </div>
         </div>
         <!--    deze buttons worden accordeon-menu en panel = inhoud --------------->
