--- a/profielLogIn.html
+++ b/profielLogIn.html
@@ -45,13 +45,13 @@
     <div class="socialMediaIcons">
         <ul>
             <li>
-                <a href="https://www.facebook.com"><img src="img/icon/fb-art.png" /></a>
+                <a href="Profiel.html"><img src="img/icon/fb-art.png" /></a>
             </li>
             <li>
-                <a href="https://accounts.google.com/signin/v2/sl/pwd?passive=1209600&osid=1&continue=https%3A%2F%2Fplus.google.com%2Fapps%2Factivities&followup=https%3A%2F%2Fplus.google.com%2Fapps%2Factivities&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><img src="img/icon/Google-plus-icon.png" /></a>
+                <a href="Profiel.html"><img src="img/icon/Google-plus-icon.png" /></a>
             </li>
             <li>
-                <a href="https://twitter.com"><img src="img/icon/Twitter-icon.png" /></a>
+                <a href="Profiel.html"><img src="img/icon/Twitter-icon.png" /></a>
             </li>
         </ul>
 
