--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -13,7 +13,7 @@
     <title> Event Name Here | App Name Here</title>
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/buttons_subscribe.js"></script>
-
+    <script src="js/laadJuistEvent.js"></script>
     <script src="js/event_detailpage.js"></script>
 
 </head>
