HOE WERKT DIE FUCKING KAART IN PHONEGAP

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <script src="js/getDataForMap.js">
     </script>
+    
 </head>
 
 <body>
@@ -46,7 +47,7 @@
         </ul>
     </footer>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQuIByXHJ4l9R68WBcsLR8LHWAJqYZ24s&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQuIByXHJ4l9R68WBcsLR8LHWAJqYZ24s&callback=initMap&libraries=geometry,places,drawing,visualization">
     </script>
 
 </body>
