--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" src="css/company_event.css">
+link rel="stylesheet" src="css/company_event.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <style>
   .row {
