--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="topofnav">
-        <img src="img/placeholder.jpg" class="jaqueslogo">
+        <img src="img/icon/hetlogo.png" class="jaqueslogo">
         <h1>The start of our community</h1>
         <nav>
             <ul>
