--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
     </footer>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQuIByXHJ4l9R68WBcsLR8LHWAJqYZ24s&callback=initMap&libraries=geometry,places,drawing,visualization">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQuIByXHJ4l9R68WBcsLR8LHWAJqYZ24s&callback=initMap&libraries=geometry,places,drawing,visualization">
     </script>
 
 </body>
