--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -39,7 +39,7 @@
 
 
         </div>
-        <section class="event_description">Help us bottle the first batch of AnderBier. An amazing afternoon with theatre for kids and beer and lemonade for the adults. </section>
+        <section class="event_description"></section>
         <!--    dit wordt accordeon-menu van het event-->
         <section class="content_accordion">
 
