DAT IS BETER, KAN JE OOK EEN ICON MAKEN?

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
     <div class="topofnav">
-        <img src="img/icon/hetlogo.png" class="jaqueslogo">
-        <h1>The start of our community</h1>
+        <img src="img/QUARTIER_LOGO.png" class="jaqueslogo">
         <nav>
             <ul>
                 <li id="filterbutton" class="nav_jobs">Jobs</li>
