KOBE GING JIJ NOG TEKSTJES ENZO BIJSCHRIJVEN OF VERZIN IK ER ZELF OOK NOG WAT

--- a/Company_Profile.html
+++ b/Company_Profile.html
@@ -35,32 +35,21 @@
       <button id="Info" class="accordion">Info</button>
       <div id="containerInfo" class="panel"> </div>
       <button class="accordion">Events</button>
-      <div id="containerEvents" class="panel">
+      <div id="containerEvents" class="panel"> </div>
+      <button class="accordion">Jobs</button>
+      <div id="containerJobs" class="panel">
         <!--
         <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">25 may 2017</span></div>
-          <div class="example_item_title"> <a href="html/Event_Detailpage.html"> BottleMania </a></div>
-          <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
-        </div>
-        <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">24 june 2017</span></div>
-          <div class="example_item_title">Brussels Biergarten </div>
-          <div class="example_item_description">A wonderful friday night at the gardens of Anderlecht. Beer and bratwurst, jawohl.</div>
-        </div>
+  <div class="example_item_date"> <span class="example_item_title_on_image">Job Offer</span></div>
+  <div class="example_item_title">BottleMaster </div>
+  <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
+</div>
+<div class="example_item clearfix">
+  <div class="example_item_date"> <span class="example_item_title_on_image">Wanted</span></div>
+  <div class="example_item_title">BeerTaster m/v/x </div>
+  <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
+</div>
 --></div>
-      <button class="accordion">Jobs</button>
-      <div class="panel">
-        <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">Job Offer</span></div>
-          <div class="example_item_title">BottleMaster </div>
-          <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
-        </div>
-        <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">Wanted</span></div>
-          <div class="example_item_title">BeerTaster m/v/x </div>
-          <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
-        </div>
-      </div>
       <button class="accordion">Products</button>
       <div class="panel">
         <div class="example_item clearfix">
