margin weg events

--- a/Event_Detailpage.html
+++ b/Event_Detailpage.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row clearfix"> <a class="icon_link" href="calendar.html"><i class="material-icons">event</i></a>
             <div id="data" class="info_company"></div> <span class="attend_link icon_link" href="#"><i class="material-icons" id="attend_label">label_outline</i><p>Join us?</p></span> </div>
-        <div class="row clearfix"> <a class="icon_link" href="Company_Profile.html"><i class="material-icons">location_on</i></a>
+        <div id="geenMarginHier" class="row clearfix"> <a class="icon_link" href="Company_Profile.html"><i class="material-icons">location_on</i></a>
             <div id="plaats" class="info_company"></div>
 
             <div class="connect_users">
