ik heb copy dus cv

--- a/Company_Profile.html
+++ b/Company_Profile.html
@@ -11,6 +11,7 @@
   <!--  dit is het icon font via google: ------>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/profielLogIn.css">
+  <link rel="stylesheet" href="css/detailBedrijf.css">
   <script>
     function goBack() {
       window.history.back()
@@ -37,32 +38,9 @@
       <button class="accordion">Events</button>
       <div id="containerEvents" class="panel"> </div>
       <button class="accordion">Jobs</button>
-      <div id="containerJobs" class="panel">
-        <!--
-        <div class="example_item clearfix">
-  <div class="example_item_date"> <span class="example_item_title_on_image">Job Offer</span></div>
-  <div class="example_item_title">BottleMaster </div>
-  <div class="example_item_description">Help us bottle the first batch of AnderBier. You'll be responsible for coordinating and instructing the bottlers.</div>
-</div>
-<div class="example_item clearfix">
-  <div class="example_item_date"> <span class="example_item_title_on_image">Wanted</span></div>
-  <div class="example_item_title">BeerTaster m/v/x </div>
-  <div class="example_item_description">A nose for the best flavors in town? Help us select the best recipes and earn your weight in beer.</div>
-</div>
---></div>
+      <div id="containerJobs" class="panel"> --></div>
       <button class="accordion">Products</button>
-      <div class="panel">
-        <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">New Product</span></div>
-          <div class="example_item_title">AnderBier Tripel </div>
-          <div class="example_item_description">First batch, you can order now!</div>
-        </div>
-        <div class="example_item clearfix">
-          <div class="example_item_date"> <span class="example_item_title_on_image">New Product</span></div>
-          <div class="example_item_title">KattenPis </div>
-          <div class="example_item_description">That other beer, different but tasty.</div>
-        </div>
-      </div>
+      <div class="panel"> This company doesn't have any products at their disposal for the moment, please contact or visit them for more information </div>
       <button class="accordion">Reviews</button>
       <div class="panel">
         <!--        Goed gestijld maar foute inhoud -------------->
