--- a/calendar.html
+++ b/calendar.html
@@ -49,7 +49,7 @@
                 <a href="index.html"> <img src="img/icon/home.svg" /></a>
             </li>
             <li>
-                <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
+                <a href="calendar.html"><img src="img/icon/calendarSelected.svg" /></a>
             </li>
             <li>
                 <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
