--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <script src="js/getDataForMap.js">
     </script>
-    
+
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <footer class="nav">
         <ul>
             <li>
-                <a href="index.html"> <img src="img/icon/home.svg" /></a>
+                <a href="index.html"> <img src="img/icon/homeSelected.svg" /></a>
             </li>
             <li>
                 <a href="calendar.html"><img src="img/icon/calendar.svg" /></a>
