--- a/profielLogIn.html
+++ b/profielLogIn.html
@@ -69,7 +69,7 @@
                 <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/userSelected.svg" /></a>
             </li>
         </ul>
     </footer>
