--- a/registerHere.html
+++ b/registerHere.html
@@ -52,7 +52,7 @@
                 <a href="SearchPage.html"><img src="img/icon/search.svg" /></a>
             </li>
             <li>
-                <a href="profielLogIn.html"><img src="img/icon/user.svg" /></a>
+                <a href="profielLogIn.html"><img src="img/icon/userSelected.svg" /></a>
             </li>
         </ul>
     </footer>
